--- a/TVCStudio/Help/nevjegy.htm
+++ b/TVCStudio/Help/nevjegy.htm
@@ -126,6 +126,40 @@ forráskódja sokat segített a WAV file generálásásnak implementálásakor.</span></
 "Arial Black",sans-serif'>Release notes:</span></b></p>
 
 <p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
+"Arial",sans-serif'>Verzió 1.8</span></p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'><b><span style='font-family:
+"Arial Black",sans-serif'>Javított hibák:</span></b></p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
+"Arial",sans-serif'>Basic tokenizáló hibásan ismert fel néhány utasítást (PL:
+INK-nek ismerte fel az INKEY$ utasítást).</span></p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'><b><span style='font-family:
+"Arial Black",sans-serif'>Új funkciók</span></b></p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
+"Arial",sans-serif'>Külön szín állítható be mostantól a BASIC szerkesztõben a megjegyzésekhez,
+és függvényekhez.</span></p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
+"Arial",sans-serif'>A BASIC szerkesztõben lehetõség van a BASIC program
+automatikus újra számozására, ehhez be kell állítanunk a kezdõ sorszámot, és a
+sornövekményt. A sorszámok az ugró utasításokban automatikusan korrigálásra
+kerülnek. A következõ utasításokban a sorszám nem kerül korrigálásra:<br>
+LIST, LLIST, DELETE, NEW</span></p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
+"Arial",sans-serif'>Lehetõség van a felesleges szóközök eltávolítására, a
+lefordított BASIC programban. Ebben az esetben a TVC-re készült BASIC kód nem
+tartalmaz szóközöket, ezáltal a programméret jelentõsen csökkenthetõ. Elõfordulhat
+azonban, hogy a program mûködésképtelenné válik, mert a TVC rosszul reagál
+bizonyos esetekben a szóköz hiányára. Ennek elkerülésére használjunk
+zárójelezést.</span></p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'>&nbsp;</p>
+
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
 "Arial",sans-serif'>Verzió 1.7</span></p>
 
 <p style='margin-bottom:0cm;margin-bottom:.0001pt'><b><span style='font-family:
@@ -174,9 +208,9 @@ nem írta ki a sikertelenség okát.</span></p>
 "Arial Black",sans-serif'>Új funkciók:</span></b></p>
 
 <p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
-"Arial",sans-serif'>A program gombok ezentúl nem tûnnek el a program listában, hanem
-inaktívvá válnak, így nem zavaró, ha a törlés gomb például a futtatás helyére
-ugrik.</span></p>
+"Arial",sans-serif'>A program gombok ezentúl nem tûnnek el a program listában,
+hanem inaktívvá válnak, így nem zavaró, ha a törlés gomb például a futtatás
+helyére ugrik.</span></p>
 
 <p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
 "Arial",sans-serif'>Bekapcsolható opció: A kimeneti ablak tartalma
@@ -285,8 +319,8 @@ balra</span></p>
 <p style='margin-bottom:0cm;margin-bottom:.0001pt'><b><span style='font-family:
 "Arial Black",sans-serif'>Javított hibák:</span></b></p>
 
-<p style='margin-bottom:0cm;margin-bottom:.0001pt'>A számok az assembly kódban
-nem voltak megfelelõen színezve.</p>
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'>A számok az assembly kódban nem
+voltak megfelelõen színezve.</p>
 
 <p style='margin-bottom:0cm;margin-bottom:.0001pt'>A ciklus idõ színe nem volt
 beállítható.</p>
@@ -298,8 +332,8 @@ beállítható.</p>
 el lett távolítva a felesleges üres hely, a fordítási opciók balra lettek
 igazítva.</p>
 
-<p style='margin-bottom:0cm;margin-bottom:.0001pt'>A program törlése gomb a
-jobb oldalra lett áthelyezve.</p>
+<p style='margin-bottom:0cm;margin-bottom:.0001pt'>A program törlése gomb a jobb
+oldalra lett áthelyezve.</p>
 
 <p style='margin-bottom:0cm;margin-bottom:.0001pt'><span style='font-family:
 "Arial",sans-serif'>&nbsp;</span></p>
